# rest-example

./: Cargo.toml  configuration.yaml
src/: configuration.rs  database.rs  error.rs  lib.rs  main.rs  startup.rs
src/domain/: buy_pizza_request.rs  mod.rs  pizza.rs  update_pizza_url.rs
src/routes/: buy_pizza.rs  delete_pizza.rs  healthcheck.rs  mod.rs  show_pizzas.rs  update_pizza.rs
tests/api/: buy_pizza.rs  healthcheck.rs  helpers.rs  main.rs  show_pizza.rs  update_pizza.rs
