[package]
name = "rest-example"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4.5.1"
async-trait = "0.1.77"
config = "0.14.0"
derive_more = "0.99.17"
json = "0.12.4"
serde = { version = "1.0.197", features = ["derive"] }
surrealdb = "1.2.0"
uuid = "1.7.0"
validator = { version = "0.16.1", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.114"
tokio = "1.36.0"
reqwest = { version = "0.11.24", features = ["json"] } 
